--- a/src/app/user-registration/user-registration.component.html
+++ b/src/app/user-registration/user-registration.component.html
@@ -3,27 +3,26 @@
   </mat-toolbar>
   <mat-card class="my-card">
      <mat-card-content>
-        <form class="my-form">
+        <form class="my-form" [formGroup] = "addUserForm" submit = "createUser()">
             <mat-form-field class="full-width">
                 <mat-label>Name</mat-label>
-                <input  matInput  placeholder="name"  name="name"  required>
+                <input  matInput  placeholder="name"  formControlName="name"  required>
+                <mat-error>This field is mandatory.</mat-error>
              </mat-form-field>
              <mat-form-field class="full-width">
                 <mat-label>Job</mat-label>
-                <input  matInput  placeholder="job" name="job"  required>
+                <input  matInput  placeholder="job" formControlName="job"  required>
+                <mat-error>This field is mandatory.</mat-error>
              </mat-form-field>
              <mat-form-field class="full-width">
-                <mat-label>Email</mat-label>
-                <input  matInput  placeholder="Email" name="email" required>
-             </mat-form-field>
-             <mat-form-field class="full-width">
-                <mat-label>Password</mat-label>
-                <input  matInput  placeholder="Password"  name="password" required>
-             </mat-form-field>
+               <mat-label>Email</mat-label>
+               <input  matInput  placeholder="email" formControlName="email"  required>
+               <mat-error>This field is mandatory.</mat-error>
+            </mat-form-field>         
         </form>
      </mat-card-content>
      <mat-card-actions>
-        <button mat-raised-button color="primary">REGISTER</button>
+        <button mat-raised-button (click)="createUser()" color="primary">REGISTER</button>
          <!-- <button mat-raised-button (click)="register()" color="primary">REGISTER</button> -->
      </mat-card-actions>
   </mat-card>
