Add user list component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
      <span><a href="/">HOME</a></span>
      <span class="spacer"></span>
      <a  mat-button  routerLink="/register">Register</a>
-     <a  mat-button  routerLink="/login">Login</a>
+     <a  mat-button  routerLink="/userList">User List</a>
   </mat-toolbar-row>
 </mat-toolbar>
 <router-outlet></router-outlet>
