--- a/src/app/user-list/user-list.component.html
+++ b/src/app/user-list/user-list.component.html
@@ -33,14 +33,14 @@
     </ng-container>
     <ng-container matColumnDef="edit">
         <mat-header-cell  *matHeaderCellDef > Edit </mat-header-cell>
-        <mat-cell *matCellDef="let row" >
-             <button mat-raised-button color="primary" >Edit</button>
+        <mat-cell *matCellDef="let user" >
+             <button mat-raised-button color="primary"><a [routerLink] = "['/edit/', user.id]">Edit</a></button>
         </mat-cell>
     </ng-container>
     <ng-container matColumnDef="delete">
         <mat-header-cell  *matHeaderCellDef > Delete </mat-header-cell>
-        <mat-cell *matCellDef="let row" >
-             <button mat-raised-button color="warn">Delete</button>
+        <mat-cell *matCellDef="let user" >
+             <button mat-raised-button color="warn"><a [routerLink] = "['/delete/', user.id]">Delete</a></button>
         </mat-cell>
     </ng-container>
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>    
